--- a/style.css
+++ b/style.css
@@ -38,3 +38,9 @@ button {
 #no {
   background-color: #ddd;
 }
+
+#no:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+  opacity: 0.6;
+}
